--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngx-translate/core": "^15.0.0",
     "@popperjs/core": "^2.11.6",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
